==> micropython/micropython/ports/renesas-ra/extint.c <==
#include <stdio.h>
#include <stddef.h>
#include <string.h>
#include "py/runtime.h"
#include "py/gc.h"
#include "py/mphal.h"
#include "pendsv.h"
#include "pin.h"
#include "extint.h"
#include "irq.h"
#include "ra_icu.h"

uint extint_register(mp_obj_t pin_obj, uint32_t mode, uint32_t pull, mp_obj_t callback_obj, bool override_callback_obj) {
    const machine_pin_obj_t *pin = NULL;
    uint pin_idx;
    uint8_t v_line = 0xff;
    if (mp_obj_is_int(pin_obj)) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("Pin object is not specified"));
    } else {
        pin = machine_pin_find(pin_obj);
        pin_idx = pin->pin;
        bool find = ra_icu_find_irq_no((uint32_t)pin_idx, (uint8_t *)&v_line);
        if (!find) {
            mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("The Pin object(%d) doesn't have EXTINT feature"), pin_idx);
        }
    }
    if (pull != GPIO_NOPULL &&
        pull != GPIO_PULLUP) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("invalid ExtInt Pull: %d"), pull);
    }
    mp_obj_t *cb = &MP_STATE_PORT(pyb_extint_callback)[v_line];
    if (!override_callback_obj && *cb != mp_const_none && callback_obj != mp_const_none) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("ExtInt vector %d is already in use"), v_line);
    }

    // We need to update callback atomically, so we disable the line
    // before we update anything.

    extint_disable(v_line);

    *cb = callback_obj;
    // ToDo: mode should be handled
    pyb_extint_mode[v_line] = mode;
    pyb_extint_callback_arg[v_line] = MP_OBJ_NEW_SMALL_INT(v_line);
    if (*cb != mp_const_none) {
        pyb_extint_callback_arg[v_line] = MP_OBJ_NEW_SMALL_INT(v_line);
        pyb_extint_hard_irq[v_line] = true;

        if (pin == NULL) {
            // pin will be NULL for non GPIO EXTI lines
            extint_trigger_mode(v_line, mode);
            extint_enable(v_line);
        } else {
            extint_irq_no[v_line] = (uint)v_line;
            ra_icu_set_callback((uint8_t)v_line, (ICU_CB)extint_callback, (void *)&extint_irq_no[v_line]);
            ra_icu_set_pin(pin_idx, true, true);
            ra_icu_enable_pin(pin_idx);
            extint_trigger_mode(v_line, mode);
            extint_enable(v_line);
        }
    }
    return v_line;
}

void extint_register_pin(const machine_pin_obj_t *pin, uint32_t mode, bool hard_irq, mp_obj_t callback_obj) {
    uint32_t line = 0;

    bool find = ra_icu_find_irq_no((uint32_t)pin->pin, (uint8_t *)&line);
    if (!find) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("The Pin object(%d) doesn't have EXTINT feature"), (uint32_t)pin->pin);
    }

    // Check if the ExtInt line is already in use by another Pin/ExtInt
    mp_obj_t *cb = &MP_STATE_PORT(pyb_extint_callback)[line];
    if (*cb != mp_const_none && MP_OBJ_FROM_PTR(pin) != pyb_extint_callback_arg[line]) {
        if (mp_obj_is_small_int(pyb_extint_callback_arg[line])) {
            mp_raise_msg_varg(&mp_type_OSError, MP_ERROR_TEXT("ExtInt vector %d is already in use"), line);
        } else {
            const machine_pin_obj_t *other_pin = MP_OBJ_TO_PTR(pyb_extint_callback_arg[line]);
            mp_raise_msg_varg(&mp_type_OSError,
                MP_ERROR_TEXT("IRQ resource already taken by Pin('%q')"), other_pin->name);
        }
    }

    extint_disable(line);

    *cb = callback_obj;
    // ToDo: mode should be handled
    pyb_extint_mode[line] = mode;

    if (*cb != mp_const_none) {
        // Configure and enable the callback

        pyb_extint_hard_irq[line] = hard_irq;
        pyb_extint_callback_arg[line] = MP_OBJ_FROM_PTR(pin);

        extint_trigger_mode(line, mode);

        // Configure the NVIC
        ra_icu_priority_irq_no((uint8_t)line, (uint32_t)IRQ_PRI_EXTINT);
        extint_irq_no[line] = (uint)line;
        ra_icu_set_callback((uint8_t)line, (ICU_CB)extint_callback, (void *)&extint_irq_no[line]);

        // Enable the interrupt
        extint_enable(line);
    }
}

void extint_trigger_mode(uint line, uint32_t mode) {
    if (line >= EXTI_NUM_VECTORS) {
        return;
    }
    mp_uint_t irq_state = disable_irq();

    // cond: 0: falling, 1: rising, 2: both edge, 3 low level
    // Enable or disable the rising detector
    uint32_t cond = 0;
    if ((mode == GPIO_MODE_IT_RISING) || (mode == GPIO_MODE_EVT_RISING)) {
        cond = 1;
    } else if ((mode == GPIO_MODE_IT_FALLING) || (mode == GPIO_MODE_EVT_FALLING)) {
        cond = 0;
    } else if ((mode == GPIO_MODE_IT_RISING_FALLING) || (mode == GPIO_MODE_EVT_RISING_FALLING)) {
        cond = 2;
    } else if (mode == GPIO_IRQ_LOWLEVEL) {
        cond = 3;
    } else {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("The device doesn't have (%d) feature"), (uint32_t)mode);
    }
    ra_icu_trigger_irq_no((uint8_t)line, cond);
    enable_irq(irq_state);
}

void extint_init0(void) {
    ra_icu_init();
    ra_icu_deinit();
    for (int i = 0; i < PYB_EXTI_NUM_VECTORS; i++) {
        MP_STATE_PORT(pyb_extint_callback)[i] = mp_const_none;
    }
}
